style: fix spacing

--- a/components/homepage/sections/how-it-works/how-it-work.module.css
+++ b/components/homepage/sections/how-it-works/how-it-work.module.css
@@ -7,10 +7,32 @@
     padding-bottom: 111px;
 }
 
+.heartSvg::after {
+    content: "";
+    position: absolute;
+    left: 20px;
+    width: 45px;
+    height: 45px;
+    background-image: url("../../../../public/assets/home/images/heart.svg");
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+    top: -60px;
+}
+
 @media screen and (max-width: 1024px) {
     .howItWork {
         margin-top: 169px;
         padding-bottom: 46px;
+    }
+    .heartSvg::after {
+        top: -20px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .heartSvg::after {
+        top: -54px;
     }
 }
 
@@ -18,5 +40,8 @@
     .howItWork {
         margin-top: 158px;
         padding-bottom: 122px;
+    }
+    .heartSvg::after {
+        top: 45px;
     }
 }
